--- a/OrchardCoreSiteCMS/OrchardCoreSiteCMS.csproj
+++ b/OrchardCoreSiteCMS/OrchardCoreSiteCMS.csproj
@@ -8,6 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="OrchardCore.Application.Cms.Core.Targets" Version="1.8.3" />
+    <PackageReference Include="OrchardCore.ContentManagement.Display" Version="1.8.3" />
+    <PackageReference Include="OrchardCore.DisplayManagement" Version="1.8.3" />
   </ItemGroup>
 
 </Project>
